--- a/src/Influunt.Host/ClientApp/package.json
+++ b/src/Influunt.Host/ClientApp/package.json
@@ -13,7 +13,9 @@
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.12",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue2-touch-events": "^2.3.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
