--- a/src/Influunt.MongoStorage/Influunt.MongoStorage.csproj
+++ b/src/Influunt.MongoStorage/Influunt.MongoStorage.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="3.1.7" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.1" />
   </ItemGroup>
 
