--- a/src/Influunt.Host/ClientApp/public/manifest.json
+++ b/src/Influunt.Host/ClientApp/public/manifest.json
@@ -39,7 +39,7 @@
    "density": "4.0"
   }
  ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#343a40",
   "theme_color": "#ffc107"
