--- a/src/Influunt.Host/ClientApp/public/manifest.json
+++ b/src/Influunt.Host/ClientApp/public/manifest.json
@@ -33,11 +33,16 @@
    "density": "3.0"
   },
   {
-   "src": "./img/icons/android-icon-192x192.png",
-   "sizes": "192x192",
-   "type": "image/png",
-   "density": "4.0"
-  }
+    "src": "./img/icons/android-icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png",
+    "density": "4.0"
+  },
+   {
+     "src": "./img/icons/rss.png",
+     "sizes": "512x512",
+     "type": "image/png"
+   }
  ],
   "start_url": "./",
   "display": "standalone",
