--- a/src/Influunt.Host/Influunt.Host.csproj
+++ b/src/Influunt.Host/Influunt.Host.csproj
@@ -9,6 +9,7 @@
     <Product>Influunt</Product>
     <Description>Influunt - Simple Rss Agregator</Description>
     <Copyright>Klabukov Erik</Copyright>
+    <Version>0-develop</Version>
   </PropertyGroup>
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
