Changes: 1) Added a worker for updating news feeds for active users (if he logged in within 2 days). It is necessary to keep the tape hot and fast loading 2) The version of the MongoDB driver is raised (fixes some errors) 3) Added MongoDB conventions: IgnoreIfDefault -> true, IgnoreExtraElements

--- a/src/Influunt.Host/appsettings.json
+++ b/src/Influunt.Host/appsettings.json
@@ -17,5 +17,9 @@
     "Mongo": {
       "ConnectionString": ""
     }
-  }
+  },
+  "FeedService": {
+    "FeedUpdatePeriod": "00:30:00",
+    "LastActivityDaysAgo": 2 
+  } 
 }
