--- a/src/Influunt.Host/Influunt.Host.csproj
+++ b/src/Influunt.Host/Influunt.Host.csproj
@@ -31,6 +31,9 @@
     <ProjectReference Include="..\Influunt.MongoStorage\Influunt.MongoStorage.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
