--- a/src/Influunt.Feed.Rss/Influunt.Feed.Rss.csproj
+++ b/src/Influunt.Feed.Rss/Influunt.Feed.Rss.csproj
@@ -9,10 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.11" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.11" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.11" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.13" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.13" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.13" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Skidbladnir.Modules" Version="1.0.1-unstalable.0.1" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.1" />
   </ItemGroup>
 
