--- a/src/Influunt.Storage/Influunt.Storage.csproj
+++ b/src/Influunt.Storage/Influunt.Storage.csproj
@@ -10,12 +10,11 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.11" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="3.1.11" />
-    <PackageReference Include="Skidbladnir.Caching.Distributed.MongoDB" Version="0.0.1-build0003" />
-    <PackageReference Include="Skidbladnir.DataProtection.Abstractions" Version="0.0.1-build0003" />
-    <PackageReference Include="Skidbladnir.DataProtection.MongoDb" Version="0.0.1-build0003" />
-    <PackageReference Include="Skidbladnir.Repository.MongoDB" Version="0.0.1-build0003" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.13" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="3.1.13" />
+    <PackageReference Include="Skidbladnir.DataProtection.Abstractions" Version="1.0.1-unstalable.0.1" />
+    <PackageReference Include="Skidbladnir.Modules" Version="1.0.1-unstalable.0.1" />
+    <PackageReference Include="Skidbladnir.Repository.MongoDB" Version="1.0.1-unstalable.0.1" />
   </ItemGroup>
 
   <ItemGroup>
