--- a/src/Influunt.Storage/Influunt.Storage.csproj
+++ b/src/Influunt.Storage/Influunt.Storage.csproj
@@ -12,9 +12,9 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.13" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="3.1.13" />
-    <PackageReference Include="Skidbladnir.DataProtection.Abstractions" Version="1.0.1-unstalable.0.1" />
-    <PackageReference Include="Skidbladnir.Modules" Version="1.0.1-unstalable.0.1" />
-    <PackageReference Include="Skidbladnir.Repository.MongoDB" Version="1.0.1-unstalable.0.1" />
+    <PackageReference Include="Skidbladnir.DataProtection.Abstractions" Version="1.1.0" />
+    <PackageReference Include="Skidbladnir.Modules" Version="1.1.0" />
+    <PackageReference Include="Skidbladnir.Repository.MongoDB" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
