--- a/src/Influunt.Feed/Influunt.Feed.csproj
+++ b/src/Influunt.Feed/Influunt.Feed.csproj
@@ -8,6 +8,6 @@
     <Copyright>Klabukov Erik</Copyright>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Skidbladnir.Repository.Abstractions" Version="1.1.0" />
+    <PackageReference Include="Skidbladnir.Repository.Abstractions" Version="1.1.1-unstalable.0.1" />
   </ItemGroup>
 </Project>
