Update skidbladnir Fix menu buttons

--- a/src/Influunt.Host/appsettings.json
+++ b/src/Influunt.Host/appsettings.json
@@ -19,7 +19,7 @@
     }
   },
   "FeedService": {
-    "FeedUpdatePeriod": "00:30:00",
-    "LastActivityDaysAgo": 2 
+    "FeedUpdateCron": "*/30 * * * *",
+    "LastActivityDaysAgo": 2
   } 
 }
