--- a/src/Influunt.Host/Influunt.Host.csproj
+++ b/src/Influunt.Host/Influunt.Host.csproj
@@ -23,7 +23,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.13" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.21" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Scrutor" Version="3.3.0" />
     <PackageReference Include="Skidbladnir.Modules" Version="1.3.2" />
     <PackageReference Include="Skidbladnir.Caching.Distributed.MongoDB" Version="1.3.2" />
     <PackageReference Include="Skidbladnir.DataProtection.MongoDb" Version="1.3.2" />
