removed synchronous access to Distributed Cache add multiple redis exceptions in fallback decorator

--- a/src/Influunt.Host/appsettings.json
+++ b/src/Influunt.Host/appsettings.json
@@ -16,6 +16,9 @@
   "ConnectionStrings": {
     "Mongo": {
       "ConnectionString": ""
+    },
+    "Redis":{
+      "ConnectionString": ""
     }
   },
   "FeedService": {
