--- a/src/Influunt.Feed.Rss/Influunt.Feed.Rss.csproj
+++ b/src/Influunt.Feed.Rss/Influunt.Feed.Rss.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.13" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.13" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.13" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.13" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Skidbladnir.Modules" Version="1.3.2" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.1" />
