Change checkout v1 to v2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
         # Runs a single command using the runners shell
-    - uses: actions/checkout@master
-    - run: git fetch --prune --unshallow
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Build And Push Influunt
       uses: docker/build-push-action@v1.1.0
       with:
