New persistent feed Updated skidbladnir and use async extensions for IQueryable Added automatic indexes creating Updated readme

--- a/src/Influunt.Host/appsettings.json
+++ b/src/Influunt.Host/appsettings.json
@@ -21,8 +21,7 @@
       "ConnectionString": ""
     }
   },
-  "FeedService": {
-    "FeedUpdateCron": "*/30 * * * *",
-    "LastActivityDaysAgo": 2
+  "FeedCrawler": {
+    "Enabled": true
   } 
 }
