--- a/src/Influunt.Feed/Influunt.Feed.csproj
+++ b/src/Influunt.Feed/Influunt.Feed.csproj
@@ -8,6 +8,11 @@
     <Copyright>Klabukov Erik</Copyright>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Skidbladnir.Repository.Abstractions" Version="1.3.2" />
+    <PackageReference Include="Crc32.NET" Version="1.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.32" />
+    <PackageReference Include="Skidbladnir.Repository.Abstractions" Version="1.7.0" />
+    <PackageReference Include="Skidbladnir.Utility.Common" Version="1.7.0" />
   </ItemGroup>
 </Project>
