Upgrade dotnet from 3.1 to 8 Upgraded nuget packages File scoped namespaces Half migrate to minimal api (move startup.cs to program.cs with new format)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Influunt.Host/bin/Debug/netcoreapp3.1/Influunt.Host.dll",
+            "program": "${workspaceFolder}/src/Influunt.Host/bin/Debug/net8/Influunt.Host.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/Influunt.Host",
             "stopAtEntry": false,
