--- a/src/Influunt.Storage/Influunt.Storage.csproj
+++ b/src/Influunt.Storage/Influunt.Storage.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8</TargetFramework>
     <Authors>Klabukov Erik</Authors>
     <Product>Influunt</Product>
     <Description>Influunt - Simple Rss Agregator</Description>
     <Copyright>Klabukov Erik</Copyright>
+    <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
